[package]
name = "utxo-scanner-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }

# library within this repo:
utxo-scanner = { path = "../utxo-scanner" }
